--- a/app/src/main/res/layout/custom_wish_list.xml
+++ b/app/src/main/res/layout/custom_wish_list.xml
@@ -6,71 +6,64 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/background_white"
         android:layout_marginVertical="@dimen/_5sdp"
-        >
-
+        android:background="@drawable/background_white"
+        android:orientation="horizontal">
 
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginLeft="@dimen/_5sdp"
-                >
+                android:layout_marginTop="@dimen/_10sdp">
 
 
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="@dimen/_70sdp"
                     android:layout_height="@dimen/_70sdp"
-                    android:src="@drawable/banana"
                     android:layout_gravity="center"
                     android:padding="@dimen/_5sdp"
-                    />
+                    android:src="@drawable/banana" />
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginHorizontal="@dimen/_5sdp"
-            android:layout_marginTop="@dimen/_10sdp">
+            android:layout_marginTop="@dimen/_10sdp"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Banana"
-                android:textSize="@dimen/_12ssp"
-                android:textColor="@color/colorBlack"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:fontFamily="@font/sans_regular"/>
+                android:fontFamily="@font/sans_regular"
+                android:text="Banana"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/_12ssp" />
 
 
             <TextView
                 android:id="@+id/item_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1kg"
-                android:textSize="@dimen/_10ssp"
-                android:textColor="@color/colorText"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:fontFamily="@font/sans_regular"/>
-
+                android:fontFamily="@font/sans_regular"
+                android:text="1kg"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/_10ssp" />
 
 
             <LinearLayout
@@ -83,101 +76,102 @@
                     android:id="@+id/item_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="₹50"
-                    android:textSize="@dimen/_12ssp"
-                    android:textColor="@color/colorBlack"
                     android:layout_marginTop="@dimen/_5sdp"
-                    android:fontFamily="@font/sans_regular"/>
-
+                    android:fontFamily="@font/sans_regular"
+                    android:text="₹50"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/_12ssp" />
 
 
                 <TextView
                     android:id="@+id/item_OG_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="₹62"
-                    android:textSize="@dimen/_10ssp"
-                    android:textColor="@color/colorText"
+                    android:layout_marginLeft="@dimen/_8sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:fontFamily="@font/sans_regular"
-                    android:layout_marginLeft="@dimen/_8sdp"/>
-
-
+                    android:text="₹62"
+                    android:textColor="@color/colorText"
+                    android:textSize="@dimen/_10ssp" />
 
 
                 <TextView
                     android:id="@+id/item_discount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="20%"
-                    android:textSize="@dimen/_12ssp"
-                    android:textColor="@color/colorRed"
+                    android:layout_marginLeft="@dimen/_8sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:fontFamily="@font/sans_regular"
-                    android:layout_marginLeft="@dimen/_8sdp"/>
+                    android:text="20%"
+                    android:textColor="@color/colorRed"
+                    android:textSize="@dimen/_12ssp" />
 
 
             </LinearLayout>
 
 
-
-
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="#E9EDF6"
-                android:layout_marginTop="@dimen/_10sdp"/>
-
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="#E9EDF6" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
 
                 <ImageView
                     android:layout_width="@dimen/_15sdp"
                     android:layout_height="@dimen/_15sdp"
-                    android:src="@drawable/img_cart"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/_3sdp"/>
+                    android:layout_marginLeft="@dimen/_3sdp"
+                    android:src="@drawable/img_cart" />
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Add to Cart"
-                    android:textSize="@dimen/_12ssp"
-                    android:textColor="@color/colorBlack"
                     android:fontFamily="@font/sans_regular"
                     android:padding="@dimen/_10sdp"
-                    android:textAlignment="center"/>
+                    android:text="Add to Cart"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/_12ssp" />
 
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/colorGray"/>
+                    android:background="@color/colorGray" />
 
-
-                <ImageView
-                    android:layout_width="@dimen/_15sdp"
-                    android:layout_height="@dimen/_15sdp"
-                    android:src="@drawable/img_delete"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/_5sdp"/>
-
-
-                <TextView
+                <LinearLayout
+                    android:id="@+id/removeWishlist"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Remove"
-                    android:textSize="@dimen/_12ssp"
-                    android:textColor="@color/colorBlack"
-                    android:fontFamily="@font/sans_regular"
-                    android:padding="@dimen/_10sdp"/>
+                    android:orientation="horizontal">
+
+
+                    <ImageView
+                        android:layout_width="@dimen/_15sdp"
+                        android:layout_height="@dimen/_15sdp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:src="@drawable/img_delete" />
+
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/sans_regular"
+                        android:padding="@dimen/_10sdp"
+                        android:text="Remove"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="@dimen/_12ssp" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
