--- a/app/src/main/res/layout/activity_my_orders.xml
+++ b/app/src/main/res/layout/activity_my_orders.xml
@@ -105,6 +105,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/txt1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sans_bold"
@@ -133,6 +134,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/txt2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sans_bold"
