--- a/app/src/main/res/layout/custom_delivery_orders.xml
+++ b/app/src/main/res/layout/custom_delivery_orders.xml
@@ -13,91 +13,50 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginVertical="@dimen/_5sdp"
-        >
+        android:layout_marginBottom="@dimen/_5sdp"
+        android:orientation="horizontal">
 
 
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
-
-
-
-
-                <ImageView
-                    android:id="@+id/past_order_image"
-                    android:layout_width="@dimen/_70sdp"
-                    android:layout_height="@dimen/_70sdp"
-                    android:src="@drawable/banana"
-                    android:layout_margin="@dimen/_5sdp"
-                    android:layout_gravity="center"
-                    android:padding="@dimen/_5sdp"
-                    />
-
-
-
-
-
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginHorizontal="@dimen/_5sdp"
-            android:layout_marginTop="@dimen/_10sdp"
+
             android:layout_weight="1"
-            >
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/past_order_name"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:id="@+id/pending_invoice_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Redmi 9A"
-                android:textSize="@dimen/_12ssp"
+                android:fontFamily="@font/sans_regular"
+                android:text="INV no 123645"
                 android:textColor="@color/colorBlack"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:fontFamily="@font/sans_regular"/>
+                android:textSize="@dimen/_12ssp" />
 
 
             <TextView
-                android:id="@+id/past_order_qty"
+                android:id="@+id/pending_total_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="QTY : 1"
-                android:textSize="@dimen/_10ssp"
-                android:textColor="@color/colorText"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:fontFamily="@font/sans_regular"/>
+                android:fontFamily="@font/sans_regular"
+                android:text=""
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/_10ssp" />
 
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/payment_type"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="View Details"
-                    android:textSize="@dimen/_12ssp"
-                    android:textColor="@color/colorRed"
-                    android:layout_marginTop="@dimen/_8sdp"
-                    android:fontFamily="@font/sans_regular"
-                    />
-
-
-            </LinearLayout>
-
-
+                android:layout_marginVertical="@dimen/_5sdp"
+                android:fontFamily="@font/sans_regular"
+                android:padding="@dimen/_5sdp"
+                android:text=""
+                android:textColor="@color/colorRed"
+                android:textSize="@dimen/_10ssp" />
 
 
         </LinearLayout>
@@ -106,27 +65,57 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="right"
-            android:layout_marginTop="@dimen/_10sdp"
-            >
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="DELIVERED"
-                android:textSize="@dimen/_10ssp"
-                android:textColor="@color/colorWhite"
-                android:fontFamily="@font/sans_regular"
                 android:layout_marginLeft="@dimen/_10sdp"
-                android:background="@drawable/round_office"
-                android:padding="@dimen/_5sdp"
                 android:layout_marginRight="@dimen/_10sdp"
-                />
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@drawable/round_button_skip"
+                android:backgroundTint="@color/colorGreen"
+                android:fontFamily="@font/sans_regular"
+                android:padding="@dimen/_5sdp"
+                android:text="Delivered"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_10ssp" />
+
+
+            <TextView
+                android:id="@+id/ordered_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:background="@drawable/round_button_skip"
+                android:fontFamily="@font/sans_regular"
+                android:gravity="center"
+                android:padding="@dimen/_5sdp"
+                android:text="date"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_10ssp" />
+
+
+            <TextView
+                android:id="@+id/view_details"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:background="@drawable/round_button_skip"
+                android:backgroundTint="@color/gray"
+                android:fontFamily="@font/sans_regular"
+                android:padding="@dimen/_5sdp"
+                android:text="View details"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_10ssp" />
 
 
         </LinearLayout>
-
 
 
     </LinearLayout>
