--- a/app/src/main/res/layout/custom_orders.xml
+++ b/app/src/main/res/layout/custom_orders.xml
@@ -14,24 +14,6 @@
         android:orientation="horizontal">
 
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
-            <ImageView
-                android:id="@+id/recent_order_image"
-                android:layout_width="@dimen/_70sdp"
-                android:layout_height="@dimen/_70sdp"
-                android:layout_gravity="center"
-                android:padding="@dimen/_5sdp"
-                android:layout_margin="@dimen/_5sdp"
-                android:src="@drawable/banana" />
-
-
-        </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -42,45 +24,52 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/recent_order_name"
+                android:id="@+id/pending_invoice_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5sdp"
                 android:fontFamily="@font/sans_regular"
-                android:text="Banana"
+                android:text="INV no 123645"
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/_12ssp" />
 
 
             <TextView
-                android:id="@+id/recent_order_qty"
+                android:id="@+id/pending_total_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:fontFamily="@font/sans_regular"
-                android:text="QTY : 1kg"
+                android:text=""
                 android:textColor="@color/colorText"
                 android:textSize="@dimen/_10ssp" />
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/payment_type"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginVertical="@dimen/_5sdp"
+                android:fontFamily="@font/sans_regular"
+                android:padding="@dimen/_5sdp"
+                android:text=""
+                android:textColor="@color/colorRed"
+                android:textSize="@dimen/_10ssp" />
 
 
-                <TextView
-                    android:id="@+id/track_recent_order"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_8sdp"
-                    android:fontFamily="@font/sans_regular"
-                    android:text="Track Order"
-                    android:textColor="@color/colorGreen"
-                    android:textSize="@dimen/_12ssp" />
+
+            <TextView
+                android:id="@+id/trackRecentOrder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/round_home"
+                android:fontFamily="@font/sans_regular"
+                android:padding="@dimen/_5sdp"
+                android:text="Track order"
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:textColor="@color/colorRed"
+                android:textSize="@dimen/_10ssp" />
 
 
-            </LinearLayout>
+
 
 
         </LinearLayout>
@@ -88,10 +77,10 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_10sdp"
             android:gravity="right"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -102,7 +91,39 @@
                 android:backgroundTint="@color/colorGreen"
                 android:fontFamily="@font/sans_regular"
                 android:padding="@dimen/_5sdp"
-                android:text="ONGOING"
+                android:text="Delivery Pending"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_10ssp" />
+
+
+            <TextView
+                android:id="@+id/ordered_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:background="@drawable/round_button_skip"
+                android:fontFamily="@font/sans_regular"
+                android:gravity="center"
+                android:padding="@dimen/_5sdp"
+                android:text="date"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_10ssp" />
+
+
+            <TextView
+                android:id="@+id/view_details"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@drawable/round_button_skip"
+                android:backgroundTint="@color/gray"
+                android:fontFamily="@font/sans_regular"
+                android:padding="@dimen/_5sdp"
+                android:text="View details"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_10ssp" />
 
